<resources>
    <string name="app_name">Inventory</string>

    <!--    Splash Activity strings -->
    <string name="splashLogoText">App logo</string>

    <!--    Login Activity strings  -->
    <string name="btSignIn">Sign in</string>
    <string name="btSignUp"><u>Sign up</u></string>
    <string name="tvUser">User name or e-mail address</string>
    <string name="tvPassword">Password</string>
    <string name="btGoogle">Login with Google</string>
    <string name="btFacebook">Login with facebook</string>
    <string name="cbRemember">Remember me</string>
    <string name="btTwitter">Login with Twitter</string>
    <string name="otherSignIn">Or sign in with:</string>
    <string name="btGithub">Login with Github</string>
    <string name="activityLoginName">Login</string>

    <!--    DashBoard Activity strings  -->
    <string name="activityDashboardLabel">Main menu</string>


    <!--    Sign up Activity strings    -->
    <string name="activitySignUp">Sign up</string>
    <string name="signupActivity_textInputUserName">User name</string>
    <string name="signupActivity_textInputPassword">Password</string>
    <string name="signupActivity_textInputPasswordConfirm">Repeat password</string>
    <string name="signupActivity_textInputEmail">E-mail</string>
    <string name="signupActivity_signUpButton">Sign Up</string>
    <string name="undoDelete">Dependency deleted.</string>
    <string name="undo">Undo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_aboutus">About us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">menusearch</string>
    <string name="orderbyname">Order by name</string>
    <string name="channel_name">Inventory</string>
    <string name="channel_description">Notification channel de inventory</string>
    <string name="openNavigation">open navigation</string>
    <string name="closeNavigation">close navigation</string>
    <string name="navigation_option">Options</string>
    <string name="item_menu_dependency">Dependency</string>
    <string name="item_menu_section">Section</string>
    <string name="item_menu_product">Product</string>
    <string name="item_submenu_Settings">Settings</string>
    <string name="item_submenu_help">Help</string>
    <string name="item_submenu_aboutUs">About us</string>
    <string name="product_description">DESCRIPTION</string>
    <string name="product_map">MAP</string>
    <string name="product_info">INFO</string>
    <string name="product_menu_info">info</string>
    <string name="product_menu_description">description</string>
    <string name="product_menu_map">map</string>

</resources>
